--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,8 +13,10 @@ jobs:
           python-version: "3.11"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt pytest
+          
+                    python -m pip install --upgrade pip
+          pip install -e .[dev]
+
       - name: Run tests
         run: |
           pytest -q
